--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SoftFixer - Solusi Perbaikan & Pengaturan Sistem Komputer</title>
+    <link rel="icon" href="/softfixer/assets/softfixerlogotitle-B9esBrn8.png" type="image/png" />
     <style>
       @keyframes float {
         0%,
