add: adding image for title

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SoftFixer - Solusi Perbaikan & Pengaturan Sistem Komputer</title>
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="icon" href="/public/softfixerlogotitle.png" type="image/png" />
     <style>
       @keyframes float {
         0%,
