--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                 </svg>
               </a>
               <a
-                href="https://facebook.com/softfixer"
+                href="https://m.facebook.com/profile.php?id=61583851447041"
                 target="_blank"
                 class="w-10 h-10 bg-blue-800 hover:bg-blue-600 rounded-full flex items-center justify-center transition transform hover:scale-110"
               >
