change: changing url of instagram business

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               href="#contact"
               class="inline-block bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-400 transition transform hover:scale-105 shadow-lg"
             >
-              Hubungi via WhatsApp
+              Hubungi Kami
             </a>
           </div>
           <div class="flex justify-center">
@@ -503,7 +503,7 @@
             </p>
             <div class="flex gap-4">
               <a
-                href="https://instagram.com/softfixer"
+                href="https://instagram.com/softfixer_"
                 target="_blank"
                 class="w-10 h-10 bg-blue-800 hover:bg-blue-600 rounded-full flex items-center justify-center transition transform hover:scale-110"
               >
