change: changing konsultation time wokr

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 <div class="text-sm text-slate-600">Klien Puas</div>
               </div>
               <div class="bg-white p-4 rounded-lg shadow">
-                <div class="text-3xl font-bold text-blue-600">24/7</div>
+                <div class="text-3xl font-bold text-blue-600">9 to 5</div>
                 <div class="text-sm text-slate-600">Konsultasi</div>
               </div>
               <div class="bg-white p-4 rounded-lg shadow">
